  * Improved efficiency of "destroy_constrs" optimization
  * Fixed soundness bugs related to "destroy_constrs" optimization and record
    getters
  * Fixed soundness bug related to higher-order constructors
  * Added cache to speed up repeated Kodkod invocations on the same problems
  * Renamed "MiniSatJNI", "zChaffJNI", "BerkMinAlloy", and "SAT4JLight" to
 	"MiniSat_JNI", "zChaff_JNI", "BerkMin_Alloy", and "SAT4J_Light"
  * Removed "sym_break", "flatten_prop", "sharing_depth", and "uncurry" options

Version 2009-1

  * Moved into Isabelle/HOL "Main"
  * Renamed "nitpick_const_def" to "nitpick_def", "nitpick_const_simp" to
    "nitpick_simp", "nitpick_const_psimp" to "nitpick_psimp", and
    "nitpick_ind_intro" to "nitpick_intro"
  * Replaced "special_depth" and "skolemize_depth" options by "specialize"
    and "skolemize"
  * Renamed "coalesce_type_vars" to "merge_type_vars"
  * Optimized Kodkod encoding of datatypes whose constructors don't appear in
    the formula to falsify
  * Added support for codatatype view of datatypes
  * Fixed soundness bug in the "uncurry" optimization
  * Fixed soundness bugs related to sets, sets of sets, (co)inductive
    predicates, typedefs, "finite", "rel_comp", and negative literals
  * Fixed monotonicity check
  * Fixed error when processing definitions
  * Fixed error in "star_linear_preds" optimization
  * Fixed error in Kodkod encoding of "The" and "Eps"
  * Fixed error in display of uncurried constants
  * Speeded up scope enumeration

Version 1.2.2 (16 Oct 2009)

  * Added and implemented "star_linear_preds" option
  * Added and implemented "format" option
  * Added and implemented "coalesce_type_vars" option
  * Added and implemented "max_genuine" option
  * Fixed soundness issues related to "set", "distinct", "image", "Sigma",
    "-1::nat", subset, constructors, sort axioms, and partially applied
    interpreted constants
  * Fixed error in "show_consts" for boxed specialized constants